@startuml
title ERD eSarpra
left to right direction

class users {
  id : INT
  nama : VARCHAR(100)
  username : VARCHAR(50)
  email : VARCHAR(100)
  password : VARCHAR(255)
  role : ENUM
  is_active : BOOLEAN
  last_login : DATETIME
  remember_token : VARCHAR(255)
  remember_expires : DATETIME
  reset_password_token : VARCHAR(255)
  reset_password_expires : DATETIME
}

class kategori {
  id : INT
  nama_kategori : VARCHAR(100)
  is_active : BOOLEAN
}

class alat {
  id : INT
  kategori_id : INT
  nama_alat : VARCHAR(100)
  kondisi : ENUM
  status : ENUM
  stok : INT
}

class peminjaman {
  id : INT
  user_id : INT
  alat_id : INT
  jumlah : INT
  tanggal_pinjam : DATE
  tanggal_kembali : DATE
  tanggal_pengembalian : DATE
  status : ENUM
  denda : DECIMAL
  denda_terlambat : DECIMAL
  denda_insiden : DECIMAL
  kondisi_pengembalian : ENUM
  status_pembayaran_denda : ENUM
}

class log_aktivitas {
  id : INT
  user_id : INT
  aktivitas : TEXT
  waktu : DATETIME
}

kategori "1" -- "0..*" alat : kategori_id
alat "1" -- "0..*" peminjaman : alat_id
users "1" -- "0..*" peminjaman : user_id
users "1" -- "0..*" log_aktivitas : user_id

@enduml
